non-msrv-tests/tests/ui/field_option.stderr
error: unknown option
 --> tests/ui/field_option.rs:4:20
  |
4 |     #[derive_where(option)]
  |                    ^^^^^^
